// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Fire Mage Analyzer analyzers Abilities matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Fire Mage Analyzer analyzers Abilities matches the suggestions snapshot 1`] = `"module has no suggestions"`;

exports[`The Fire Mage Analyzer analyzers AlwaysBeCasting matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic standard statistic-box"
    style={
      Object {
        "height": "auto",
        "zIndex": 1,
      }
    }
  >
    <div
      className="panel-body"
    >
      <div
        className="pad"
      >
        <label>
          <img
            alt="Downtime"
            className="icon game "
            src="//render-us.worldofwarcraft.com/icons/56/spell_mage_altertime.jpg"
          />
           
          Downtime
        </label>
        <div
          className="value"
        >
          25.15 %
        </div>
        <div
          style={
            Object {
              "marginTop": "0.5em",
            }
          }
        >
          <div
            className="statistic-box-bar"
          >
            <div
              className="stat-health-bg"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onTouchStart={[Function]}
              style={
                Object {
                  "width": "74.84749715005334%",
                }
              }
            >
              <img
                alt="Active time"
                src="/img/sword.png"
              />
            </div>
            <div
              className="remainder DeathKnight-bg"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onTouchStart={[Function]}
            >
              <img
                alt="Downtime"
                src="/img/afk.png"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="detail-corner"
      data-place="top"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className="icon"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M58.9,82.9h7v12.9H34.1V82.9h7.1V45.5h-0.6c-3.6,0-6.4-2.9-6.4-6.4c0-3.6,2.9-6.4,6.4-6.4h0.6h17.4h0.3V82.9z M49,25.8  c6,0,10.8-4.8,10.8-10.8C59.8,9,55,4.2,49,4.2S38.2,9,38.2,15C38.2,21,43,25.8,49,25.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Fire Mage Analyzer analyzers AlwaysBeCasting matches the suggestions snapshot 1`] = `
Array [
  Object {
    "details": null,
    "icon": "spell_mage_altertime",
    "importance": "minor",
    "issue": <span>
      Your downtime can be improved. Try to Always Be Casting (ABC), try to reduce the delay between casting spells. If you have to move, try casting 
      <SpellLink
        icon={true}
        id={2948}
      />
      .
    </span>,
    "stat": <React.Fragment>
      25.15% downtime
       (
      &lt;20.00% is recommended
      )
    </React.Fragment>,
  },
]
`;

exports[`The Fire Mage Analyzer analyzers ArcaneIntellect matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Fire Mage Analyzer analyzers ArcaneIntellect matches the suggestions snapshot 1`] = `Array []`;

exports[`The Fire Mage Analyzer analyzers ArcaneTorrent matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Fire Mage Analyzer analyzers ArcaneTorrent matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Fire Mage Analyzer analyzers BlasterMaster matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic standard statistic-box"
    style={
      Object {
        "height": "auto",
        "zIndex": 1,
      }
    }
  >
    <div
      className="panel-body"
    >
      <div
        className="pad"
      >
        <label>
          <a
            href="http://wowhead.com/spell=274596"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Blaster Master"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/spell_fire_fireball.jpg"
            />
          </a>
           
          <a
            href="http://wowhead.com/spell=274596"
            rel="noopener noreferrer"
            target="_blank"
          >
            Blaster Master
          </a>
        </label>
        <div
          className="value"
        >
          2.33 stacks per Combustion
        </div>
      </div>
    </div>
    <div
      className="detail-corner"
      data-place="top"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className="icon"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M58.9,82.9h7v12.9H34.1V82.9h7.1V45.5h-0.6c-3.6,0-6.4-2.9-6.4-6.4c0-3.6,2.9-6.4,6.4-6.4h0.6h17.4h0.3V82.9z M49,25.8  c6,0,10.8-4.8,10.8-10.8C59.8,9,55,4.2,49,4.2S38.2,9,38.2,15C38.2,21,43,25.8,49,25.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Fire Mage Analyzer analyzers BlasterMaster matches the suggestions snapshot 1`] = `
Array [
  Object {
    "details": null,
    "icon": "spell_fire_fireball",
    "importance": "regular",
    "issue": <React.Fragment>
      On average, you got 
      2.33
       stacks of 
      <SpellLink
        icon={true}
        id={274596}
      />
       per 
      <SpellLink
        icon={true}
        id={190319}
      />
       cast. In order to maximize the use of the trait, you should aim for getting to 
      3
       stacks each time you use Combustion. For more information on how to adjust your Combustion rotation to make this happen, refer to 
      <a
        href="https://cdn.discordapp.com/attachments/524387813060247553/606533890080899083/bm_combustion.png"
        rel="noopener noreferrer"
        target="_blank"
      >
        this graphic
      </a>
    </React.Fragment>,
    "stat": <React.Fragment>
      2.33 stacks per Combustion
       (
      3 is recommended
      )
    </React.Fragment>,
  },
]
`;

exports[`The Fire Mage Analyzer analyzers Buffs matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Fire Mage Analyzer analyzers Buffs matches the suggestions snapshot 1`] = `"module has no suggestions"`;

exports[`The Fire Mage Analyzer analyzers CancelledCasts matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic small value"
    label="test"
    position={10}
  >
    <div
      className="panel-body"
    >
      <div
        className="pad boring-text "
      >
        <label>
          Cancelled Casts
        </label>
        <div
          className="value"
        >
          <svg
            className="icon stroke"
            viewBox="15 15 70 70"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              style={
                Object {
                  "strokeLinecap": "round",
                  "strokeMiterlimit": 10,
                  "strokeWidth": 10,
                }
              }
            >
              <line
                x1="21.19"
                x2="78.81"
                y1="21.19"
                y2="78.81"
              />
              <line
                x1="78.81"
                x2="21.19"
                y1="21.19"
                y2="78.81"
              />
            </g>
          </svg>
           
          6.96
          % 
          <small>
            Casts Cancelled
          </small>
        </div>
      </div>
    </div>
    <div
      className="detail-corner"
      data-place="top"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className="icon"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M58.9,82.9h7v12.9H34.1V82.9h7.1V45.5h-0.6c-3.6,0-6.4-2.9-6.4-6.4c0-3.6,2.9-6.4,6.4-6.4h0.6h17.4h0.3V82.9z M49,25.8  c6,0,10.8-4.8,10.8-10.8C59.8,9,55,4.2,49,4.2S38.2,9,38.2,15C38.2,21,43,25.8,49,25.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Fire Mage Analyzer analyzers CancelledCasts matches the suggestions snapshot 1`] = `
Array [
  Object {
    "details": null,
    "icon": "inv_misc_map_01",
    "importance": "minor",
    "issue": <React.Fragment>
      You cancelled 
      6.96
      % of your spells. While it is expected that you will have to cancel a few casts to react to boss mechanics or move, you should try to ensure that you are cancelling as few casts as possible by utilizing movement abilities such as 
      <SpellLink
        icon={true}
        id={1953}
      />
       and 
      <SpellLink
        icon={true}
        id={212653}
      />
      .
    </React.Fragment>,
    "stat": <React.Fragment>
      6.96% casts cancelled
       (
      &lt;5.00% is recommended
      )
    </React.Fragment>,
  },
]
`;

exports[`The Fire Mage Analyzer analyzers Checklist matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Fire Mage Analyzer analyzers Checklist matches the suggestions snapshot 1`] = `"module has no suggestions"`;

exports[`The Fire Mage Analyzer analyzers CombustionCharges matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Fire Mage Analyzer analyzers CombustionCharges matches the suggestions snapshot 1`] = `Array []`;

exports[`The Fire Mage Analyzer analyzers CombustionFirestarter matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Fire Mage Analyzer analyzers CombustionFirestarter matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Fire Mage Analyzer analyzers CombustionSpellUsage matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Fire Mage Analyzer analyzers CombustionSpellUsage matches the suggestions snapshot 1`] = `Array []`;

exports[`The Fire Mage Analyzer analyzers CooldownThroughputTracker matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Fire Mage Analyzer analyzers CooldownThroughputTracker matches the suggestions snapshot 1`] = `Array []`;

exports[`The Fire Mage Analyzer analyzers HeatingUp matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic standard statistic-box"
    style={
      Object {
        "height": "auto",
        "zIndex": 1,
      }
    }
  >
    <div
      className="panel-body"
    >
      <div
        className="pad"
      >
        <label>
          <a
            href="http://wowhead.com/spell=48107"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Heating Up"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/ability_mage_hotstreak.jpg"
            />
          </a>
           
          Heating Up Utilization
        </label>
        <div
          className="value"
        >
          97 %
        </div>
      </div>
    </div>
    <div
      className="detail-corner"
      data-place="top"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className="icon"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M58.9,82.9h7v12.9H34.1V82.9h7.1V45.5h-0.6c-3.6,0-6.4-2.9-6.4-6.4c0-3.6,2.9-6.4,6.4-6.4h0.6h17.4h0.3V82.9z M49,25.8  c6,0,10.8-4.8,10.8-10.8C59.8,9,55,4.2,49,4.2S38.2,9,38.2,15C38.2,21,43,25.8,49,25.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Fire Mage Analyzer analyzers HeatingUp matches the suggestions snapshot 1`] = `Array []`;

exports[`The Fire Mage Analyzer analyzers HotStreak matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic standard statistic-box"
    style={
      Object {
        "height": "auto",
        "zIndex": 1,
      }
    }
  >
    <div
      className="panel-body"
    >
      <div
        className="pad"
      >
        <label>
          <a
            href="http://wowhead.com/spell=48108"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Hot Streak"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/ability_mage_hotstreak.jpg"
            />
          </a>
           
          Hot Streak utilization
        </label>
        <div
          className="value"
        >
          100 %
        </div>
      </div>
    </div>
    <div
      className="detail-corner"
      data-place="top"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className="icon"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M58.9,82.9h7v12.9H34.1V82.9h7.1V45.5h-0.6c-3.6,0-6.4-2.9-6.4-6.4c0-3.6,2.9-6.4,6.4-6.4h0.6h17.4h0.3V82.9z M49,25.8  c6,0,10.8-4.8,10.8-10.8C59.8,9,55,4.2,49,4.2S38.2,9,38.2,15C38.2,21,43,25.8,49,25.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Fire Mage Analyzer analyzers HotStreak matches the suggestions snapshot 1`] = `Array []`;

exports[`The Fire Mage Analyzer analyzers HotStreakPreCasts matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic standard statistic-box"
    style={
      Object {
        "height": "auto",
        "zIndex": 1,
      }
    }
  >
    <div
      className="panel-body"
    >
      <div
        className="pad"
      >
        <label>
          <a
            href="http://wowhead.com/spell=48108"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Hot Streak"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/ability_mage_hotstreak.jpg"
            />
          </a>
           
          Hot Streak pre-casts
        </label>
        <div
          className="value"
        >
          50 %
        </div>
      </div>
    </div>
    <div
      className="detail-corner"
      data-place="top"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className="icon"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M58.9,82.9h7v12.9H34.1V82.9h7.1V45.5h-0.6c-3.6,0-6.4-2.9-6.4-6.4c0-3.6,2.9-6.4,6.4-6.4h0.6h17.4h0.3V82.9z M49,25.8  c6,0,10.8-4.8,10.8-10.8C59.8,9,55,4.2,49,4.2S38.2,9,38.2,15C38.2,21,43,25.8,49,25.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Fire Mage Analyzer analyzers HotStreakPreCasts matches the suggestions snapshot 1`] = `
Array [
  Object {
    "details": null,
    "icon": "ability_mage_hotstreak",
    "importance": "major",
    "issue": <React.Fragment>
      Unless you are guaranteed to crit (i.e. during 
      <SpellLink
        icon={true}
        id={190319}
      />
      , 
      <SpellLink
        icon={true}
        id={205026}
      />
      , or 
      <SpellLink
        icon={true}
        id={269644}
      />
      ), you should always cast 
      <SpellLink
        icon={true}
        id={133}
      />
       
      
       alongside using your 
      <SpellLink
        icon={true}
        id={48108}
      />
       proc. This way, if one of the two abilities crit you will gain a new 
      <SpellLink
        icon={true}
        id={48107}
      />
       proc, and if both crit you will get a new 
      <SpellLink
        icon={true}
        id={48108}
      />
       proc. You failed to do this 
      10
       times.
    </React.Fragment>,
    "stat": <React.Fragment>
      50.00% Utilization
       (
      95.00% is recommended
      )
    </React.Fragment>,
  },
]
`;

exports[`The Fire Mage Analyzer analyzers HotStreakWastedCrits matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Fire Mage Analyzer analyzers HotStreakWastedCrits matches the suggestions snapshot 1`] = `Array []`;

exports[`The Fire Mage Analyzer analyzers HyperthreadWristwraps matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Fire Mage Analyzer analyzers HyperthreadWristwraps matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Fire Mage Analyzer analyzers Kindling matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Fire Mage Analyzer analyzers Kindling matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Fire Mage Analyzer analyzers LucidDreams matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Fire Mage Analyzer analyzers LucidDreams matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Fire Mage Analyzer analyzers Meteor matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic standard statistic-box"
    style={
      Object {
        "height": "auto",
        "zIndex": 1,
      }
    }
  >
    <div
      className="panel-body"
    >
      <div
        className="pad"
      >
        <label>
          <a
            href="http://wowhead.com/spell=153561"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Meteor"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/spell_mage_meteor.jpg"
            />
          </a>
           
          Meteor Utilization
        </label>
        <div
          className="value"
        >
          100 %
        </div>
      </div>
    </div>
    <div
      className="detail-corner"
      data-place="top"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className="icon"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M58.9,82.9h7v12.9H34.1V82.9h7.1V45.5h-0.6c-3.6,0-6.4-2.9-6.4-6.4c0-3.6,2.9-6.4,6.4-6.4h0.6h17.4h0.3V82.9z M49,25.8  c6,0,10.8-4.8,10.8-10.8C59.8,9,55,4.2,49,4.2S38.2,9,38.2,15C38.2,21,43,25.8,49,25.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Fire Mage Analyzer analyzers Meteor matches the suggestions snapshot 1`] = `Array []`;

exports[`The Fire Mage Analyzer analyzers MirrorImage matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Fire Mage Analyzer analyzers MirrorImage matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Fire Mage Analyzer analyzers Pyroclasm matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Fire Mage Analyzer analyzers Pyroclasm matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Fire Mage Analyzer analyzers RuneOfPower matches the statistic snapshot 1`] = `null`;

exports[`The Fire Mage Analyzer analyzers RuneOfPower matches the suggestions snapshot 1`] = `Array []`;

exports[`The Fire Mage Analyzer analyzers SearingTouch matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Fire Mage Analyzer analyzers SearingTouch matches the suggestions snapshot 1`] = `
Array [
  Object {
    "details": null,
    "icon": "ability_warlock_backdraft",
    "importance": "minor",
    "issue": <React.Fragment>
      You cast 
      <SpellLink
        icon={true}
        id={133}
      />
       instead of 
      <SpellLink
        icon={true}
        id={2948}
      />
       while the target was under 30% health 
      4
       times. When using 
      <SpellLink
        icon={true}
        id={269644}
      />
       always use Scorch instead of Fireball when the target is under 30% health since Scorch does 150% damage and is guaranteed to crit.
    </React.Fragment>,
    "stat": <React.Fragment>
      86.21% Utilization
       (
      95.00 is recommended
      )
    </React.Fragment>,
  },
]
`;

exports[`The Fire Mage Analyzer should match the checklist snapshot 1`] = `
<ul
  className="checklist"
>
  <li
    className="expandable  passed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex wrapable"
      >
        <div
          className="flex-main name"
        >
          Use your cooldowns
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#a6c34c",
                  "width": "79.49747309696245%",
                }
              }
            />
          </div>
        </div>
        <div
          className="flex-sub chevron"
        >
          <div>
            <svg
              className="icon"
              viewBox="0 0 16 9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            Using your cooldown abilities as often as possible can help raise your dps significantly. Some help more than others, but as a general rule of thumb you should be looking to use most of your damaging abilities and damage cooldowns as often as possible unless you need to save them for a priority burst phase that is coming up soon.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=190319"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/spell_fire_sealoffire.jpg"
                  />
                   
                  Combustion
                </a>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  100.00%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=108853"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/spell_fire_fireball.jpg"
                  />
                   
                  Fire Blast
                </a>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  88.07%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#a6c34c",
                        "transition": "background-color 800ms",
                        "width": "87.04442950691704%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=116011"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/spell_mage_runeofpower.jpg"
                  />
                   
                  Rune of Power
                </a>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  111.52%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=153561"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/spell_mage_meteor.jpg"
                  />
                   
                  Meteor
                </a>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  69.70%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#ac1f39",
                        "transition": "background-color 800ms",
                        "width": "30.945462880932766%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    className="expandable  passed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex wrapable"
      >
        <div
          className="flex-main name"
        >
          Use Combustion effectively
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#4ec04e",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
        <div
          className="flex-sub chevron"
        >
          <div>
            <svg
              className="icon"
              viewBox="0 0 16 9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            Using 
            <a
              href="http://wowhead.com/spell=190319"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/spell_fire_sealoffire.jpg"
              />
               
              Combustion
            </a>
             properly is one of the most important aspects of playing Fire well. Therefore it is critical that you make the most of the time that you have while Combustion is active. This include things such as not wasting time or GCDs while Combustion is active and ensuring that you properly setup for your "Combustion Window".
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Fire Blast Charges
              </div>
              <div
                className="flex-sub"
                style={
                  Object {
                    "marginLeft": 10,
                  }
                }
              >
                <div
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onTouchStart={[Function]}
                >
                  <svg
                    className="icon"
                    viewBox="0 0 100 100"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
                    />
                    <path
                      d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
                    />
                    <path
                      d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  100.00%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Bad Scorch Uses
              </div>
              <div
                className="flex-sub"
                style={
                  Object {
                    "marginLeft": 10,
                  }
                }
              >
                <div
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onTouchStart={[Function]}
                >
                  <svg
                    className="icon"
                    viewBox="0 0 100 100"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
                    />
                    <path
                      d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
                    />
                    <path
                      d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  0
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Bad Fireball Uses
              </div>
              <div
                className="flex-sub"
                style={
                  Object {
                    "marginLeft": 10,
                  }
                }
              >
                <div
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onTouchStart={[Function]}
                >
                  <svg
                    className="icon"
                    viewBox="0 0 100 100"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
                    />
                    <path
                      d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
                    />
                    <path
                      d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  0
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    className="expandable  passed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex wrapable"
      >
        <div
          className="flex-main name"
        >
          Use your procs effectively
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#a6c34c",
                  "width": "80.55%",
                }
              }
            />
          </div>
        </div>
        <div
          className="flex-sub chevron"
        >
          <div>
            <svg
              className="icon"
              viewBox="0 0 16 9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            Fire Mage revolves almost entirely around utilizing your procs effectively. Therefore it is very important that you manage your procs correctly to ensure that you get the most out of them.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Hot Streak Proc Utilization
              </div>
              <div
                className="flex-sub"
                style={
                  Object {
                    "marginLeft": 10,
                  }
                }
              >
                <div
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onTouchStart={[Function]}
                >
                  <svg
                    className="icon"
                    viewBox="0 0 100 100"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
                    />
                    <path
                      d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
                    />
                    <path
                      d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  100.00%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Wasted Crits Per Minute
              </div>
              <div
                className="flex-sub"
                style={
                  Object {
                    "marginLeft": 10,
                  }
                }
              >
                <div
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onTouchStart={[Function]}
                >
                  <svg
                    className="icon"
                    viewBox="0 0 100 100"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
                    />
                    <path
                      d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
                    />
                    <path
                      d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  0
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Hardcast into Hot Streak
              </div>
              <div
                className="flex-sub"
                style={
                  Object {
                    "marginLeft": 10,
                  }
                }
              >
                <div
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onTouchStart={[Function]}
                >
                  <svg
                    className="icon"
                    viewBox="0 0 100 100"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
                    />
                    <path
                      d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
                    />
                    <path
                      d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  50.00%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#ac1f39",
                        "transition": "background-color 800ms",
                        "width": "22.2%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Fire Blast Usage
              </div>
              <div
                className="flex-sub"
                style={
                  Object {
                    "marginLeft": 10,
                  }
                }
              >
                <div
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onTouchStart={[Function]}
                >
                  <svg
                    className="icon"
                    viewBox="0 0 100 100"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
                    />
                    <path
                      d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
                    />
                    <path
                      d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  96.97%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    className="expandable  passed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex wrapable"
      >
        <div
          className="flex-main name"
        >
          Use your talents effectively
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#a6c34c",
                  "width": "89.06298850574713%",
                }
              }
            />
          </div>
        </div>
        <div
          className="flex-sub chevron"
        >
          <div>
            <svg
              className="icon"
              viewBox="0 0 16 9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            Regardless of which talents you select, you should ensure that you are utilizing them properly. If you are having trouble effectively using a particular talent, you should consider taking a different talent that you can utilize properly or focus on effectively using the talents that you have selected.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Searing Touch Utilization
              </div>
              <div
                className="flex-sub"
                style={
                  Object {
                    "marginLeft": 10,
                  }
                }
              >
                <div
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onTouchStart={[Function]}
                >
                  <svg
                    className="icon"
                    viewBox="0 0 100 100"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
                    />
                    <path
                      d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
                    />
                    <path
                      d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  86.21%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#a6c34c",
                        "transition": "background-color 800ms",
                        "width": "70.61896551724138%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Rune of Power Uptime
              </div>
              <div
                className="flex-sub"
                style={
                  Object {
                    "marginLeft": 10,
                  }
                }
              >
                <div
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onTouchStart={[Function]}
                >
                  <svg
                    className="icon"
                    viewBox="0 0 100 100"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
                    />
                    <path
                      d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
                    />
                    <path
                      d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  10
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#a6c34c",
                        "transition": "background-color 800ms",
                        "width": "96.57000000000002%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Meteor Utilization
              </div>
              <div
                className="flex-sub"
                style={
                  Object {
                    "marginLeft": 10,
                  }
                }
              >
                <div
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onTouchStart={[Function]}
                >
                  <svg
                    className="icon"
                    viewBox="0 0 100 100"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
                    />
                    <path
                      d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
                    />
                    <path
                      d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  100.00%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    className="expandable expanded failed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex wrapable"
      >
        <div
          className="flex-main name"
        >
          Avoid downtime
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#df7102",
                  "width": "47.43822743581738%",
                }
              }
            />
          </div>
        </div>
        <div
          className="flex-sub chevron"
        >
          <div>
            <svg
              className="icon"
              viewBox="0 0 16 9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            As a DPS, it is important to spend as much time casting as possible as if you are not casting then you are not doing damage. Therefore it is important to minimize your movements, stay within range of the target, and cancelling casts .. if you can avoid it. While some fights will have an amount of time that is unavoidable downtime; the more you can minimize that downtime, the better.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Downtime
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  25.15%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#ac1f39",
                        "transition": "background-color 800ms",
                        "width": "7.943543479229692%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Cancelled Casts
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  6.96%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#a6c34c",
                        "transition": "background-color 800ms",
                        "width": "86.93291139240506%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    className="expandable expanded failed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex wrapable"
      >
        <div
          className="flex-main name"
        >
          Be well prepared
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#ffc84a",
                  "width": "63.33333333333333%",
                }
              }
            />
          </div>
        </div>
        <div
          className="flex-sub chevron"
        >
          <div>
            <svg
              className="icon"
              viewBox="0 0 16 9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            Being well prepared with food, flasks, potions and enchants is an easy way to improve your performance.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                All items enchanted
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  3
                   
                  / 3
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Using high quality enchants
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  1
                   
                  / 3
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#df7102",
                        "transition": "background-color 800ms",
                        "width": "33.33333333333333%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Used a pre-potion
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  Yes
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Used a second potion
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  Yes
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Used a high quality pre-potion
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  No
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#ac1f39",
                        "transition": "background-color 800ms",
                        "width": "0%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                High quality flask used
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  No
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#ac1f39",
                        "transition": "background-color 800ms",
                        "width": "0%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Flask used
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  Yes
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                High quality food used
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  No
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#ac1f39",
                        "transition": "background-color 800ms",
                        "width": "0%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Food used
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  Yes
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Arcane Intellect active
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  100.00%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
</ul>
`;
